<resources>
    <string name="app_name">BeyondChat</string>
    <string name="app_display_name">BeyondChat</string>
    <string name="app_version">V0.0.1</string>
    <string name="app_copy_right">Designed by cfryan\nCompliled by Android Studio</string>
    <string name="action_settings">Settings</string>

    <string name="run_bg_ticker">越信正在后台运行</string>
    <string name="timeout_try_again">网络连接超时，请重试</string>


    <string name="changelog_full_title">更新日志</string>
    <string name="changelog_title">更新日志</string>


    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="more">显示更多</string>

    <!-- 用户状态 -->
    <string name="status_available">在线</string>
    <string name="status_away">离开</string>
    <string name="status_chat">Q我吧</string>
    <string name="status_dnd">请勿打扰</string>
    <string name="status_xa">隐身</string>
    <string name="status_offline">离线</string>
    <string name="status_busy">忙碌</string>
    <string name="status_online">在线</string>


    <string name="account_input_prompt">请输入用户名</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="login">登 录</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login_prompt">登录中</string>
    <string name="connect_prompt_connecting">连接中…</string>
    <string name="connect_prompt_no">未连接</string>
    <string name="null_account_prompt">请输入帐号</string>
    <string name="account_register">注册账号</string>

    <string name="request_failed">登录失败:</string>


    <string name="main_tab_message">消息</string>
    <string name="main_tab_contact">联系人</string>
    <string name="main_tab_activity">活动</string>
    <string name="main_tab_setting">设置</string>


    <string name="add_media">附件</string>
    <string name="chat_send">发送</string>
    <string name="aio_ime_action_label">完成</string>
    <string name="aio_press_speak_label">按住说话</string>
    <string name="title_record_btn">按下说话</string>


    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

</resources>
