<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/ui_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/ui_green" />

        <include
            android:id="@+id/ui_title_bar"
            layout="@layout/ui_title_bar" />

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <LinearLayout
            android:id="@+id/frame_search_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA000000"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_main"
                android:padding="3dp">

                <Button
                    android:id="@+id/btn_search_cancel"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:layout_centerVertical="true"
                    android:text="取消"
                    android:textColor="@color/ui_deep_green" />

                <com.cfryan.beyondchat.ui.view.ClearEditText
                    android:id="@+id/filter_edit"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_toLeftOf="@id/btn_search_cancel"
                    android:background="@drawable/shape_high_rounded"
                    android:drawableLeft="@mipmap/icon_search"
                    android:layout_centerVertical="true"
                    android:drawablePadding="5dp"
                    android:hint="搜索"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textSize="14.0dp" />
            </RelativeLayout>

            <ListView
                android:id="@+id/lv_search_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>

        <View
            style="@style/divider_basic"
            android:layout_height="1px"
            android:background="@color/ui_selector_gray" />

        <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RB_0"
                style="@style/main_navigation_tab"
                android:checked="true"
                android:drawableTop="@drawable/main_tab_business_selector"
                android:text="@string/main_tab_message" />

            <RadioButton
                android:id="@+id/RB_1"
                style="@style/main_navigation_tab"
                android:drawableTop="@drawable/main_tab_business_circle_selector"
                android:text="@string/main_tab_contact" />

            <RadioButton
                android:id="@+id/RB_2"
                style="@style/main_navigation_tab"
                android:drawableTop="@drawable/main_tab_public_board_selector"
                android:text="@string/main_tab_activity" />

            <RadioButton
                android:id="@+id/RB_3"
                style="@style/main_navigation_tab"
                android:drawableTop="@drawable/main_tab_settings_selector"
                android:text="@string/main_tab_setting" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
